--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .background{
-    width: 100%;
-    height: 799px;
+    width: 100vw;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     background-color: antiquewhite;
@@ -28,6 +28,7 @@ body{
 }
 .head{
     text-align: center;
+    width: 100%;
 }
 .content div{
     margin-top: 30px;
@@ -39,6 +40,7 @@ body{
 }
 input{
     border: transparent;
+    width: 70%;
 }
 input:focus{
     outline: none;
@@ -51,7 +53,7 @@ input:focus{
     padding: 8px 15px;
 }
 .sign-up{
-    margin: 25px 0 0 100px;
+    margin: 25px 33% 0;
     display: block;
     font-size: 16px;
     padding: 8px 20px;
@@ -85,4 +87,31 @@ p{
 }
 .success{
     border: 1px solid green;
+}
+
+@media (max-width: 425px) {
+    .content{
+        padding: 50px 10px;
+        background-color: white;
+        width: 70vw;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3),
+                    5px 10px 25px rgb(212, 47, 47),
+                    -5px -10px 25px rgb(62, 62, 226)
+                ;
+    }
+    .sign-up{
+        margin: 25px 33% 0;
+        display: block;
+        font-size: max(14px, 1.5vw);
+        padding: 8px 10px;
+        border: none;
+        background-color: rgb(250, 255, 215);
+        border-radius: 50px;
+        box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.315);
+        cursor: pointer;
+    }
 }
