--- a/main.css
+++ b/main.css
@@ -1,80 +1,69 @@
 *{
     margin: 0;
     padding: 0;
+    outline: none;
 }
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 .background{
     width: 100vw;
     height: 100vh;
     align-items: center;
+    background: antiquewhite;
     justify-content: center;
-    background-color: antiquewhite;
     display: flex;
 }
 .content{
-    padding: 50px 10px;
-    background-color: white;
+    padding: 50px 0;
+    background: white;
     width: 300px;
     display: block;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3),
-                5px 10px 25px rgb(212, 47, 47),
-                -5px -10px 25px rgb(62, 62, 226)
-            ;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 .head{
     text-align: center;
-    width: 100%;
 }
 .content div{
-    margin-top: 30px;
-    margin-left: 30px;
+    margin: 30px 20px;
     justify-content: center;
     align-items: center;
-    text-align: left;
-    display: block;
 }
 input{
     border: transparent;
-    width: 70%;
-}
-input:focus{
+    width: 230px;
     outline: none;
-}
-.content input{
     background-color: rgb(248, 248, 248);
     border-radius: 10px;
     margin-top: 10px;
-    display: flex;
     padding: 8px 15px;
 }
 .sign-up{
-    margin: 25px 33% 0;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    color: black;
+    margin: 0 33%;
     display: block;
     font-size: 16px;
     padding: 8px 20px;
     border: none;
-    background-color: rgb(250, 255, 215);
+    background-color: rgba(222, 184, 135, 0.4);
     border-radius: 50px;
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.315);
     cursor: pointer;
 }
 .sign-up:hover{
     background-color: antiquewhite;
     border-radius: 50px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.315);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
     cursor: pointer;
-    transition: 0.3s ease-in-out;
-}
-.sign-up:focus{
-    outline: none;
-    background-color: antiquewhite;
-    border-radius: 50px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.315);
+    transition: all 0.3s ease;
 }
 p{
     font-size: 11px;
@@ -91,27 +80,11 @@ p{
 
 @media (max-width: 425px) {
     .content{
-        padding: 50px 10px;
-        background-color: white;
-        width: 70vw;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        border-radius: 10px;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3),
-                    5px 10px 25px rgb(212, 47, 47),
-                    -5px -10px 25px rgb(62, 62, 226)
-                ;
+        width: 83vw;
+        padding: 30px 10px;
     }
     .sign-up{
-        margin: 25px 33% 0;
-        display: block;
-        font-size: max(14px, 1.5vw);
+        font-size: clamp(14px, 1.5vw, 16px  );
         padding: 8px 10px;
-        border: none;
-        background-color: rgb(250, 255, 215);
-        border-radius: 50px;
-        box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.315);
-        cursor: pointer;
     }
 }
