--- a/main.css
+++ b/main.css
@@ -9,10 +9,6 @@ body{
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-}
-.background{
-    width: 100vw;
-    height: 100vh;
     align-items: center;
     background: antiquewhite;
     justify-content: center;
@@ -31,10 +27,18 @@ body{
 .head{
     text-align: center;
 }
-.content div{
+.content-container{
     margin: 30px 20px;
     justify-content: center;
     align-items: center;
+}
+.content-container div{
+    align-items: center;
+    display: block;
+    margin-bottom: 5%;
+}
+.content-container div:last-child{
+    margin-bottom: 0;
 }
 input{
     border: transparent;
@@ -66,6 +70,13 @@ input{
     cursor: pointer;
     transition: all 0.3s ease;
 }
+.sign-up:focus{
+    background-color: antiquewhite;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
+    cursor: pointer;
+    transition: all 0.7s ease;
+}
 p{
     font-size: 11px;
     font-weight: 600;
@@ -79,16 +90,27 @@ p{
     border: 1px solid green;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 500px) {
+    body{
+        padding: 30% 0;
+        overflow-x: hidden;
+    }
     .content{
-        width: 83vw;
-        padding: 27px 10px;
+        display: block;
+        align-items: center;
+        justify-content: center;
+        padding: 7% 10px 7%;
     }
-    .content input{
-        width: 80%;
+    .content-container{
+        display: block;
+        justify-content: center;
+        align-items: center;
     }
-    .content div{
-        margin: 3vh 20px;
+    .content-container div{
+        align-items: center;
+        display: block;
+        text-align: left;
+        margin: 3vh 0 2vw;
     }
     .sign-up{
         font-size: clamp(14px, 1.5vw, 16px  );
